--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
           <span class="icon fa fa-tachometer"></span>
         <span class="text">KPI Dashboard</span>
         </span>
-        <span class="tab triggerTest" data-tab="c">
+        <span class="tab triggerTest" id="prodKPI" data-tab="c">
           <span class="icon fa fa-sliders"></span>
         <span class="text">Product Dashboard</span>
         </span>
@@ -373,7 +373,7 @@
 
           </section>
 
-          <div class="containeranal">
+          <div class="containeranal2">
             <div id="Compdash">
               <div class="filters ">
                 <div class=" centerDiv">
@@ -385,7 +385,7 @@
 
             <div id="drop1">
                <div class="dropdown drophelp">
-                 <button class="btn dropdown-toggle  dropdownMenuButton" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MIK (prevero)</button>
+                 <button class="btn dropdown-toggle  dropdownMenuButton" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">cubus</button>
                 <div id="Productfilter" class="dropdown-menu scrollable-menu" aria-labelledby="dropdownMenuButton">
                   </div>
               </div>
