--- a/src/index.html
+++ b/src/index.html
@@ -1533,6 +1533,8 @@
           </div>
 
         </footer>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/iframe-resizer/3.6.1/iframeResizer.contentWindow.min.js"></script>
 </body>
 
 </html>
