--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
             <div id="analyzer" class="row margintop2 justify-content-md-center">
 
 
-              <div class="maxWidth col-md">
+              <div class="maxWidth col-md te">
                 <div class="row margintopAnal">
 
                   <div class="filter">
