--- a/src/index.html
+++ b/src/index.html
@@ -717,43 +717,47 @@
                           <tbody>
                             <tr>
                               <td>Benefits: Accurate reporting</td>
-                              <td>Do you benefit from more accurate reporting, analysis or planning?</td>
+                              <td>To what extent has the accuracy of your reporting, analysis or planning improved?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Better decisions</td>
-                              <td>Are you able to make better business decisions through better analysis?</td>
+                              <td>To what extent do you now make better business decisions through better analysis?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Competitive advantage</td>
-                              <td>Did your competitive advantage increase?</td>
+                              <td>To what extent has your competitive advantage increased?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Costs</td>
-                              <td>Have you reduced costs? (IT or non-IT)</td>
+                              <td>To what extent have you reduced costs? (IT or non-IT)</td>
                             </tr>
                             <tr>
                               <td>Benefits: Customer satisfaction</td>
-                              <td>Do you benefit from improved customer satisfaction?</td>
+                              <td>To what extent has your customer satisfaction improved ?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Data quality</td>
-                              <td>Do you benefit from improved data quality?</td>
+                              <td>To what extent has your data quality improved?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Employee satisfaction</td>
-                              <td>Do you benefit from improved employee satisfaction?</td>
+                              <td>To what extent has your employee satisfaction improved?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Faster reporting</td>
-                              <td>Do you benefit from faster reporting, analysis or planning?</td>
+                              <td>To what extent has your reporting, analysis or planning become faster?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Headcount</td>
-                              <td>Have you saved on headcount in business departments or IT?</td>
+                              <td>To what extent have you saved on headcount in business departments or IT?</td>
                             </tr>
                             <tr>
                               <td>Benefits: Operational efficency</td>
-                              <td>Do you benefit from improved operational efficency?</td>
+                              <td>To what extent has your operational efficiency improved?</td>
+                            </tr>
+                            <tr>
+                              <td>Benefits: Increased revenues</td>
+                              <td>To what extent have your revenues increased?</td>
                             </tr>
                             <tr>
                               <td>Demography: Country</td>
