--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
                       <h4 class="question">Question</h4>
                     </div>
                     <div>
-                      <select id="question" name="question" class="selectpicker">
+                      <select id="question" name="question" class="selectpicker" data-size="5">
                   <optgroup label="Demographics">
                   <option id="button4" value="307" class="single" data-sort="1">Country</option>
                   <option id="button1" value="5" class="single" data-sort="1">Department</option>
@@ -204,7 +204,7 @@
                       <h4>Products</h4>
                     </div>
                     <div>
-                      <select id="products" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>5" data-count-selected-text="All selected">
+                      <select id="products" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>5" data-count-selected-text="All selected" data-size="5">
                         <option value="Bissantz">Bissantz</option>
                         <option value="BOARD">BOARD</option>
                         <option value="CALUMO">CALUMO</option>
@@ -251,7 +251,7 @@
                       <h4>Region</h4>
                     </div>
                     <div>
-                      <select id="region" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>5" data-count-selected-text="All selected">
+                      <select id="region" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>5" data-count-selected-text="All selected" >
                 <option value="Europe">Europe</option>
                 <option value="Asia and Pacific">Asia and Pacific</option>
                 <option value="North America">North America</option>
@@ -266,7 +266,7 @@
                       <h4>Industry</h4>
                     </div>
                     <div>
-                      <select id="industry" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>10" data-count-selected-text="All selected">
+                      <select id="industry" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>10" data-count-selected-text="All selected" data-size="5">
                     <option value="Manufacturing">Manufacturing</option>
                     <option value="Services">Services</option>
                     <option value="Retail/Wholesale">Retail/Wholesale</option>
@@ -286,7 +286,7 @@
                       <h4>No. of employees</h4>
                     </div>
                     <div>
-                      <select id="employee" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>4" data-count-selected-text="All selected">
+                      <select id="employee" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>4" data-count-selected-text="All selected" >
                     <option value="Less than 150">Less than 150</option>
                     <option value="150 - 500">150 - 500</option>
                     <option value="500 - 1500">500 - 1500</option>
@@ -313,7 +313,7 @@
                       <h4>Country</h4>
                     </div>
                     <div>
-                      <select id="country" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>88" data-count-selected-text="All selected">
+                      <select id="country" class="selectpicker" multiple data-actions-box="true" data-selected-text-format="count>88" data-count-selected-text="All selected" data-size="5">
                         <option value="Algeria">Algeria</option>
 <option value="American Samoa">American Samoa</option>
 <option value="Andorra">Andorra</option>
