--- a/src/index.html
+++ b/src/index.html
@@ -444,7 +444,7 @@
 
                     <h4 id="questionKPI">KPI filter</h4>
 
-                    <select id="KPIfilter" name="KPIfilter" class="selectpicker">
+                    <select id="KPIfilter" name="KPIfilter" class="selectpicker" data-size="5">
 							<option id="button10006" value="402">Business benefits</option>
 							<option id="button10007" value="403">Project success</option>
 							<option id="button10008" value="404">Project length</option>
@@ -481,7 +481,7 @@
                     <div>
                       <h4 id="questionPG">Peer group filter<h4>
 						</div>
-        						<select id="PGfilter" name="PGfilter" class="selectpicker">
+        						<select id="PGfilter" name="PGfilter" class="selectpicker" data-size="5">
         							<option id="button100034" value="501">All products</option>
         							<option id="button100035" value="502">Americas-focused vendors</option>
                       <option id="button100036" value="503">Dashboarding-focused products</option>
@@ -570,7 +570,7 @@
                   <div class=" filter">
                 <h4 id="questionKPI">Peer group<h4>
 
-                <select id="peergroupID" class="selectpicker" title="Select a peer group">
+                <select id="peergroupID" class="selectpicker" title="Select a peer group" data-size="5">
                   <option data-hidden="true" value="5"></option>
                   <option id="button434" value="10">All products</option>
                   <option id="button435" value="101">Americas-focused vendors</option>  <option id="button100036" value="503">Dashboarding-focused products</option>
@@ -588,7 +588,7 @@
                 <div class=" filter">
                   <h4 id="questionPG">KPI<h4>
 
-                <select id="KPIID" name="KPIID" class="selectpicker" multiple title="Select KPIs" disabled>
+                <select id="KPIID" name="KPIID" class="selectpicker" multiple title="Select KPIs" disabled data-size="5">
                   <option id="button206" value="Business benefits">Business benefits</option>
                   <option id="button207" value="Project success">Project success</option>
                   <option id="button208" value="Project length">Project length</option>
@@ -624,7 +624,7 @@
 
                 <h4>Product</h4>
 
-                      <select id="ProductID" class="selectpicker" title="Select products" multiple disabled>
+                      <select id="ProductID" class="selectpicker" title="Select products" multiple disabled data-size="5">
                   <option>Bissantz</option>
                   <option>BOARD</option>
                   <option>CALUMO</option>
